@@ -44,10 +44,10 @@ Connection::Connection(const std::string &cnm, const std::string& host, short po
     m_lock(0),
     m_info(host),
     m_responder(new ResponseTracker)
-{	
+{
     Poll::instance().Ready.connect(sigc::mem_fun(this, &Connection::gotData));
 }
-	
+
 Connection::~Connection()
 {
     // ensure we emit this before our vtable goes down, since we are the
@@ -72,9 +72,9 @@ int Connection::disconnect()
         warning() << "called disconnect on already disconnected Connection";
         return -1;
     }
-    
+
     assert(m_lock == 0);
-	
+
     // this is a soft disconnect; it will give people a chance to do tear down and so on
     // in response, people who need to hold the disconnect will lock() the
     // connection, and unlock when their work is done. A timeout stops
@@ -86,39 +86,39 @@ int Connection::disconnect()
         hardDisconnect(true);
         return 0;
     }
-    
+
     // fell through, so someone has locked =>
     // start a disconnect timeout
     _timeout = new Timeout(5000);
     _timeout->Expired.connect(sigc::mem_fun(this, &Connection::onDisconnectTimeout));
     return 0;
 }
-   
+
 void Connection::gotData(PollData &data)
 {
     if (!_stream || !data.isReady(_stream))
         return;
-	
+
     if (_status == DISCONNECTED) {
         error() << "Got data on a disconnected stream";
         return;
     }
-   
+
     BaseConnection::recv();
-    
+
 // now dispatch recieved ops
     while (!m_opDeque.empty()) {
         RootOperation op = m_opDeque.front();
         m_opDeque.pop_front();
         dispatchOp(op);
     }
-    
+
 // finally, clean up any redispatches that fired (aka 'deleteLater')
     for (unsigned int D=0; D < m_finishedRedispatches.size(); ++D)
         delete m_finishedRedispatches[D];
-        
+
     m_finishedRedispatches.clear();
-}		
+}
 
 void Connection::send(const Atlas::Objects::Root &obj)
 {
@@ -130,13 +130,13 @@ void Connection::send(const Atlas::Objects::Root &obj)
 
     if (_stream->eof() || _stream->fail()) {
         handleFailure("Connection::send: stream failed");
-		hardDisconnect(false);
+        hardDisconnect(false);
         return;
     }
 
-#ifdef ATLAS_LOG	
+#ifdef ATLAS_LOG
     std::stringstream debugStream;
-    
+
     Atlas::Codecs::Bach debugCodec(debugStream, *this /*dummy*/);
     Atlas::Objects::ObjectsEncoder debugEncoder(debugCodec);
     debugEncoder.streamObjectsMessage(obj);
@@ -144,7 +144,7 @@ void Connection::send(const Atlas::Objects::Root &obj)
 
     std::cout << "sending:" << debugStream.str() << std::endl;
 #endif
-    
+
     _encode->streamObjectsMessage(obj);
     (*_stream) << std::flush;
 }
@@ -159,7 +159,7 @@ void Connection::unregisterRouterForTo(Router* router, const std::string toId)
     assert(m_toRouters[toId] == router);
     m_toRouters.erase(toId);
 }
-        
+
 void Connection::registerRouterForFrom(Router* router, const std::string fromId)
 {
     m_fromRouters[fromId] = router;
@@ -170,14 +170,14 @@ void Connection::unregisterRouterForFrom(Router* router, const std::string fromI
     assert(m_fromRouters[fromId] == router);
     m_fromRouters.erase(fromId);
 }
-        
+
 void Connection::setDefaultRouter(Router* router)
 {
     if (m_defaultRouter || !router) {
         error() << "setDefaultRouter duplicate set or null argument";
         return;
     }
-    
+
     m_defaultRouter = router;
 }
 
@@ -185,7 +185,7 @@ void Connection::clearDefaultRouter()
 {
     m_defaultRouter = NULL;
 }
-    
+
 void Connection::lock()
 {
     ++m_lock;
@@ -195,11 +195,11 @@ void Connection::unlock()
 {
     if (m_lock < 1)
         throw InvalidOperation("Imbalanced lock/unlock calls on Connection");
-	
+
     if (--m_lock == 0) {
         switch (_status)
         {
-        case DISCONNECTING:	
+        case DISCONNECTING:
             debug() << "Connection unlocked in DISCONNECTING, closing socket";
             debug() << "have " << m_opDeque.size() << " ops waiting";
             m_opDeque.clear();
@@ -223,7 +223,7 @@ void Connection::refreshServerInfo()
         warning() << "called refreshServerInfo while not connected, ignoring";
         return;
     }
-    
+
     m_info.setStatus(ServerInfo::QUERYING);
     Get gt;
     gt->setSerialno(getNewSerialno());
@@ -242,7 +242,7 @@ void Connection::objectArrived(const Root& obj)
     debugStream << std::flush;
 
     std::cout << "recieved:" << debugStream.str() << std::endl;
-#endif    
+#endif
     RootOperation op = smart_dynamic_cast<RootOperation>(obj);
     if (op.isValid()) {
         m_opDeque.push_back(op);
@@ -251,13 +251,13 @@ void Connection::objectArrived(const Root& obj)
 }
 
 void Connection::dispatchOp(const RootOperation& op)
-{    
+{
     try {
         Router::RouterResult rr = Router::IGNORED;
         bool anonymous = op->isDefaultTo();
-        
+
         if (m_responder->handleOp(op)) return;
-        
+
     // locate a router based on from
         if (!op->isDefaultFrom()) {
             IdRouterMap::const_iterator R = m_fromRouters.find(op->getFrom());
@@ -266,7 +266,7 @@ void Connection::dispatchOp(const RootOperation& op)
                 if ((rr == Router::HANDLED) || (rr == Router::WILL_REDISPATCH)) return;
             }
         }
-        
+
     // locate a router based on the op's TO value
         if (!anonymous) {
             IdRouterMap::const_iterator R = m_toRouters.find(op->getTo());
@@ -277,13 +277,13 @@ void Connection::dispatchOp(const RootOperation& op)
                 warning() << "recived op with TO=" << op->getTo() << ", but no router is registered for that id";
             }
         }
-        
+
     // special-case, server info refreshes are handled here directly
         if (op->instanceOf(INFO_NO) && anonymous) {
             handleServerInfo(op);
             return;
         }
-                
+
     // go to the default router
         if (m_defaultRouter) rr = m_defaultRouter->handleOperation(op);
         if (rr != Router::HANDLED) warning() << "no-one handled op:" << op;
@@ -296,14 +296,14 @@ void Connection::dispatchOp(const RootOperation& op)
 
 void Connection::setStatus(Status ns)
 {
-	if (_status != ns) StatusChanged.emit(ns);
-	_status = ns;
+    if (_status != ns) StatusChanged.emit(ns);
+    _status = ns;
 }
 
 void Connection::handleFailure(const std::string &msg)
 {
-	Failure.emit(msg);
-	// FIXME - reset I think, but ensure this is safe
+    Failure.emit(msg);
+    // FIXME - reset I think, but ensure this is safe
     m_lock= 0;
 }
 
@@ -314,12 +314,12 @@ void Connection::handleTimeout(const std::string& msg)
 
 void Connection::handleServerInfo(const RootOperation& op)
 {
-    RootEntity svr = smart_dynamic_cast<RootEntity>(op->getArgs().front());	
+    RootEntity svr = smart_dynamic_cast<RootEntity>(op->getArgs().front());
     if (!svr.isValid()) {
         error() << "server INFO argument object is broken";
         return;
     }
-    
+
     m_info.processServer(svr);
     GotServerInfo.emit();
 }
@@ -342,7 +342,7 @@ void Connection::postForDispatch(const Root& obj)
     RootOperation op = smart_dynamic_cast<RootOperation>(obj);
     assert(op.isValid());
     m_opDeque.push_back(op);
-    
+
 #ifdef ATLAS_LOG
     std::stringstream debugStream;
     Atlas::Codecs::Bach debugCodec(debugStream, *this /* dummy */);
@@ -363,11 +363,11 @@ void Connection::cleanupRedispatch(Redispatch* r)
 
 long getNewSerialno()
 {
-	static long _nextSerial = 1001;
-	// note this will eventually loop (in theorey), but that's okay
-	// FIXME - using the same intial starting offset is problematic
-	// if the client dies, and quickly reconnects
-	return _nextSerial++;
+    static long _nextSerial = 1001;
+    // note this will eventually loop (in theorey), but that's okay
+    // FIXME - using the same intial starting offset is problematic
+    // if the client dies, and quickly reconnects
+    return _nextSerial++;
 }
 
 } // of namespace
